--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -43,6 +43,7 @@ TESTS = \
 	basic-types/bug756376.vala \
 	basic-types/bug761307.vala \
 	basic-types/bug771626.test \
+	basic-types/bug777697.test \
 	pointers/bug590641.vala \
 	namespaces.vala \
 	methods/lambda.vala \
