--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -217,6 +217,7 @@ TESTS = \
 	dbus/async-errors.test \
 	dbus/signals.test \
 	dbus/filedescriptor.test \
+	dbus/filedescriptor-errors.test \
 	dbus/dicts.test \
 	dbus/bug596862.vala \
 	dbus/bug602003.test \
