doc: Rename doc/vala to doc/manual
Clarify contents of directory with new name

--- a/configure.ac
+++ b/configure.ac
@@ -108,7 +108,7 @@ AC_CONFIG_FILES([Makefile
            vapi/Makefile
            tests/Makefile
            doc/Makefile
-           doc/vala/Makefile
+           doc/manual/Makefile
            gobject-introspection/Makefile
            vapigen/vapigen.pc
            vapigen/Makefile
