--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -175,6 +175,7 @@ TESTS = \
 	objects/bug767092.test \
 	objects/bug768823.test \
 	objects/bug766739.vala \
+	objects/bug779219.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
