memberaccess: Don't resolve base_method/property twice
https://bugzilla.gnome.org/show_bug.cgi?id=779219

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -214,6 +214,7 @@ TESTS = \
 	objects/bug615830-2.test \
 	objects/bug766739.vala \
 	objects/bug778632.vala \
+	objects/bug779219.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
