manual: Add version information and copyright to manual
The documentation is downloaded from the GNOME wiki. So the same copyright
notice is used. The wiki states (c) The GNOME Project at the bottom of each
page. The license for all new documentation is CC-BY-SA 4.0. See
https://wiki.gnome.org/DocumentationProject/Guide/Licensing

--- a/configure.ac
+++ b/configure.ac
@@ -113,6 +113,7 @@ AC_CONFIG_FILES([Makefile
            tests/Makefile
            doc/Makefile
            doc/manual/Makefile
+           doc/manual/version.xml
            gobject-introspection/Makefile
            vapigen/vapigen.pc
            vapigen/Makefile
