tests: Add "use_string_marshalling = true" dbus-test
Commit 09e6818d01e introduced the possibility of inserting _error
labels at the end of functions, which make C compilers angry.
This "test" (no actual tests are run, just compile correctness is
checked here) triggers some of these situations.

the "test3" abstract method is trickier though, it doesn't warn
but produces code with early returns, which in practice means
possible leaks.

https://bugzilla.gnome.org/show_bug.cgi?id=778540

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -216,6 +216,7 @@ TESTS = \
 	dbus/errors.test \
 	dbus/async.test \
 	dbus/async-errors.test \
+	dbus/enum-string-marshalling.vala \
 	dbus/signals.test \
 	dbus/filedescriptor.test \
 	dbus/filedescriptor-errors.test \
