class: Perform more thorough compatibility check of inherited properties
https://bugzilla.gnome.org/show_bug.cgi?id=779038

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -216,6 +216,9 @@ TESTS = \
 	objects/bug615830-2.test \
 	objects/bug766739.vala \
 	objects/bug778632.vala \
+	objects/bug779038-1.test \
+	objects/bug779038-2.test \
+	objects/bug779038-3.test \
 	objects/bug779219.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
