--- a/doc/manual/version.xml.in
+++ b/doc/manual/version.xml.in
@@ -2,7 +2,7 @@
 <!DOCTYPE article  PUBLIC '-//OASIS//DTD DocBook XML V4.4//EN'  'http://www.docbook.org/xml/4.4/docbookx.dtd'>
 <articleinfo>
 <abstract>
-<para>The Vala programming language is a high level language that produces binaries for the native platform. The binaries maintain the C Application Binary Interface (ABI) and so can be built as either an application or a library.</para>
+<para>Vala is a high level programming language that produces binaries for the native platform. The binaries maintain the C Application Binary Interface (ABI) and can be built as either an application or a library.</para>
 <para>The Vala Reference Manual gives details on Vala's syntax and type system, including polymorphism using interfaces and type parameters (generics). Vala includes additional code generation routines, for example D-Bus inter-process communication and GTK+3 composite templates, these are only referred to in the Attributes section. The reference manual does not provide a tutorial for these features.</para>
 <para>Vala is developed in a collaborative and self-supporting way by its users. They provide bug reports, documentation, patches, patch reviews and core development. Following this model of development the manual has an editable version at <ulink url="https://wiki.gnome.org/Projects/Vala/Manual">https://wiki.gnome.org/Projects/Vala/Manual</ulink> .</para>
 </abstract>
