signalmodule: Handle nullable ValueTypes properly and treat them as pointer
Nullable value-types are actually pointers to heap-allocated structures.
Therefore a pointer-based marshaller is required for those types.

https://bugzilla.gnome.org/show_bug.cgi?id=758816

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -206,6 +206,7 @@ TESTS = \
 	objects/bug702736.vala \
 	objects/bug702846.vala \
 	objects/bug751338.vala \
+	objects/bug758816.vala \
 	objects/bug760031.test \
 	objects/bug764481.vala \
 	objects/bug767092.test \
