--- a/doc/manual/version.xml.in
+++ b/doc/manual/version.xml.in
@@ -6,7 +6,7 @@
 <para>The Vala Reference Manual gives details on Vala's syntax and type system, including polymorphism using interfaces and type parameters (generics). Vala includes additional code generation routines, for example D-Bus inter-process communication and GTK+3 composite templates, these are only referred to in the Attributes section. The reference manual does not provide a tutorial for these features.</para>
 <para>Vala is developed in a collaborative and self-supporting way by its users. They provide bug reports, documentation, patches, patch reviews and core development. Following this model of development the manual has an editable version at <ulink url="https://wiki.gnome.org/Projects/Vala/Manual">https://wiki.gnome.org/Projects/Vala/Manual</ulink> .</para>
 </abstract>
-<edition>@PACKAGE_SUFFIX@</edition>
+<edition>@API_VERSION@</edition>
 <releaseinfo>@VERSION@
 <remark>Draft, document contains omissions and might contain errors</remark>
 </releaseinfo>
