doc: Add support to build docs for vala itself

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -53,3 +53,83 @@ install-data-hook:
 	cd $(DESTDIR)$(man1dir) && $(LN_S) -f vala-gen-introspect@PACKAGE_SUFFIX@.1 vala-gen-introspect.1
 	cd $(DESTDIR)$(man1dir) && $(LN_S) -f vapigen@PACKAGE_SUFFIX@.1 vapigen.1
 endif
+
+
+COMMON_VALADOCFLAGS = \
+	--force \
+	--verbose \
+	--private \
+	--internal \
+	--use-svg-images \
+	--vapidir=$(top_builddir)/vapi \
+	--pkg config \
+	--pkg gmodule-2.0 \
+	--directory=internal-apis/ \
+	--doclet=$(top_builddir)/valadoc/doclets/html/.libs \
+	--doclet-arg "--no-browsable-check" \
+	--basedir=internal-apis/ \
+	$(NULL)
+
+if HAVE_CGRAPH
+COMMON_VALADOCFLAGS += -D WITH_CGRAPH
+endif
+
+gee_VALASOURCES = $(top_srcdir)/gee/*.vala
+internal-apis/gee: $(gee_VALASOURCES)
+	$(AM_V_GEN)$(top_builddir)/valadoc/valadoc \
+		$(COMMON_VALADOCFLAGS) \
+		--package-name gee \
+		--package-version $(PACKAGE_VERSION) \
+		$(filter %.vala,$^)
+	@touch $@
+
+vala_VALASOURCES = $(top_srcdir)/vala/*.vala
+internal-apis/vala: $(vala_VALASOURCES) internal-apis/gee
+	$(AM_V_GEN)$(top_builddir)/valadoc/valadoc \
+		$(COMMON_VALADOCFLAGS) \
+		--package-name vala \
+		--package-version $(PACKAGE_VERSION) \
+		--vapidir=$(top_builddir)/gee --pkg gee \
+		$(filter %.vala,$^)
+	@touch $@
+
+ccode_VALASOURCES = $(top_srcdir)/ccode/*.vala
+internal-apis/ccode: $(ccode_VALASOURCES) internal-apis/gee
+	$(AM_V_GEN)$(top_builddir)/valadoc/valadoc \
+		$(COMMON_VALADOCFLAGS) \
+		--package-name ccode \
+		--package-version $(PACKAGE_VERSION) \
+		--vapidir=$(top_builddir)/gee --pkg gee \
+		$(filter %.vala,$^)
+	@touch $@
+
+codegen_VALASOURCES = $(top_srcdir)/codegen/*.vala
+internal-apis/codegen: $(codegen_VALASOURCES) internal-apis/vala internal-apis/ccode
+	$(AM_V_GEN)$(top_builddir)/valadoc/valadoc\
+		$(COMMON_VALADOCFLAGS) \
+		--package-name codegen \
+		--package-version $(PACKAGE_VERSION) \
+		--vapidir=$(top_builddir)/gee --pkg gee \
+		--vapidir=$(top_builddir)/vala --pkg vala \
+		--vapidir=$(top_builddir)/ccode --pkg ccode \
+		$(filter %.vala,$^)
+	@touch $@
+
+valadoc_VALASOURCES = $(top_srcdir)/libvaladoc/*.vala $(top_srcdir)/libvaladoc/*/*.vala
+internal-apis/valadoc: $(valadoc_VALASOURCES) internal-apis/codegen
+	$(AM_V_GEN)$(top_builddir)/valadoc/valadoc\
+		$(COMMON_VALADOCFLAGS) \
+		--package-name valadoc \
+		--package-version $(PACKAGE_VERSION) \
+		--pkg libgvc \
+		--vapidir=$(top_builddir)/gee --pkg gee \
+		--vapidir=$(top_builddir)/vala --pkg vala \
+		--vapidir=$(top_builddir)/ccode --pkg ccode \
+		--vapidir=$(top_builddir)/codegen --pkg codegen \
+		$(filter %.vala,$^)
+	@touch $@
+
+internal-api-docs: internal-apis/gee internal-apis/vala internal-apis/ccode internal-apis/codegen internal-apis/valadoc
+
+clean-local:
+	rm -rf $(builddir)/internal-apis
