codegen: Properly null-out source on ownership-transfer of delegates

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -145,6 +145,7 @@ TESTS = \
 	structs/bug775761.vala \
 	structs/bug777194.vala \
 	delegates/delegates.vala \
+	delegates/reference_transfer.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
 	delegates/bug595639.vala \
