--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -43,6 +43,7 @@ TESTS = \
 	basic-types/bug761307.vala \
 	basic-types/bug761736.vala \
 	basic-types/bug771626.test \
+	basic-types/bug772426.vala \
 	basic-types/bug777697.test \
 	namespaces.vala \
 	methods/lambda.vala \
