--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -44,6 +44,7 @@ TESTS = \
 	basic-types/bug756376.vala \
 	basic-types/bug761307.vala \
 	basic-types/bug771626.test \
+	basic-types/bug772426.vala \
 	basic-types/bug777697.test \
 	chainup/class-base.vala \
 	chainup/class-base-foo.vala \
