gvariant: Optimize (de)serialization of arrays with type-signature "ay"
https://bugzilla.gnome.org/show_bug.cgi?id=772426

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -44,6 +44,7 @@ TESTS = \
 	basic-types/bug761307.vala \
 	basic-types/bug761736.vala \
 	basic-types/bug771626.test \
+	basic-types/bug772426.vala \
 	basic-types/bug777697.test \
 	basic-types/bug787152.vala \
 	chainup/class-base.vala \
