--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -131,6 +131,7 @@ TESTS = \
 	delegates/bug638415.vala \
 	delegates/bug639751.vala \
 	delegates/bug659778.vala \
+	delegates/bug683925.vala \
 	delegates/bug703804.vala \
 	objects/chainup.vala \
 	objects/classes.vala \
