codegen: Fix delegate initializer for instance fields
Set delegate-target to "self" which is available in *_instance_init().

https://bugzilla.gnome.org/show_bug.cgi?id=683925

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -153,6 +153,7 @@ TESTS = \
 	delegates/bug638415.vala \
 	delegates/bug639751.vala \
 	delegates/bug659778.vala \
+	delegates/bug683925.vala \
 	delegates/bug703804.vala \
 	delegates/bug761360.vala \
 	delegates/bug772204.test \
