codegen: Don't leak target-reference when casting/assigning owned delegates
Regression of 6d07669384cdb70c3c657dba67d5048212f25da9

https://bugzilla.gnome.org/show_bug.cgi?id=780426

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -123,6 +123,7 @@ TESTS = \
 	structs/bug694140.vala \
 	structs/bug749952.vala \
 	structs/bug775761.vala \
+	delegates/casting.vala \
 	delegates/delegates.vala \
 	delegates/reference_transfer.vala \
 	delegates/bug539166.vala \
