codegen: Don't allow assigning delegate if no target/closure is available
https://bugzilla.gnome.org/show_bug.cgi?id=598869

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -153,6 +153,7 @@ TESTS = \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
 	delegates/bug595639.vala \
+	delegates/bug598869.test \
 	delegates/bug638415.vala \
 	delegates/bug639751.vala \
 	delegates/bug659778.vala \
