build: Make ccode and codegen private API
valac is the only consumer and will statically link these libraries.

--- a/ccode/Makefile.am
+++ b/ccode/Makefile.am
@@ -75,12 +75,6 @@ libvalaccode_la_SOURCES = \
 	$(libvalaccode_la_VALASOURCES:.vala=.c) \
 	$(NULL)
 
-ccodeincludedir = $(includedir)/vala@PACKAGE_SUFFIX@
-
-ccodeinclude_HEADERS = \
-	valaccode.h \
-	$(NULL)
-
 ccode.vapi ccode.vala.stamp: $(libvalaccode_la_VALASOURCES)
 	$(VALA_V)$(VALAC) \
 		$(COVERAGE_VALAFLAGS) \
@@ -97,6 +91,7 @@ ccode.vapi ccode.vala.stamp: $(libvalaccode_la_VALASOURCES)
 libvalaccode_la_LIBADD = \
 	$(COVERAGE_LIBS) \
 	$(GLIB_LIBS) \
+	$(top_builddir)/vala/libvala@PACKAGE_SUFFIX@.la \
 	$(NULL)
 
 EXTRA_DIST = $(libvalaccode_la_VALASOURCES) ccode.vapi ccode.vala.stamp
