--- a/codegen/Makefile.am
+++ b/codegen/Makefile.am
@@ -12,11 +12,11 @@ AM_CPPFLAGS = \
 
 BUILT_SOURCES = codegen.vala.stamp
 
-lib_LTLIBRARIES = \
-	libvala@PACKAGE_SUFFIX@.la \
+noinst_LTLIBRARIES = \
+	libvalaccodegen.la \
 	$(NULL)
 
-libvala_la_VALASOURCES = \
+libvalaccodegen_la_VALASOURCES = \
 	valaccodearraymodule.vala \
 	valaccodeassignmentmodule.vala \
 	valaccodeattribute.vala \
@@ -47,18 +47,12 @@ libvala_la_VALASOURCES = \
 	valatyperegisterfunction.vala \
 	$(NULL)
 
-libvala@PACKAGE_SUFFIX@_la_SOURCES = \
+libvalaccodegen_la_SOURCES = \
 	codegen.vala.stamp \
-	$(libvala_la_VALASOURCES:.vala=.c) \
+	$(libvalaccodegen_la_VALASOURCES:.vala=.c) \
 	$(NULL)
 
-codegenincludedir = $(includedir)/vala@PACKAGE_SUFFIX@
-
-codegeninclude_HEADERS = \
-	valacodegen.h \
-	$(NULL)
-
-codegen.vapi codegen.vala.stamp: $(libvala_la_VALASOURCES)
+codegen.vapi codegen.vala.stamp: $(libvalaccodegen_la_VALASOURCES)
 	$(VALA_V)$(VALAC) \
 		$(COVERAGE_VALAFLAGS) \
 		$(VALAFLAGS) \
@@ -72,19 +66,17 @@ codegen.vapi codegen.vala.stamp: $(libvala_la_VALASOURCES)
 		$^
 	@touch $@
 
-libvala@PACKAGE_SUFFIX@_la_LDFLAGS = -no-undefined
-
-libvala@PACKAGE_SUFFIX@_la_LIBADD = \
+libvalaccodegen_la_LIBADD = \
 	$(COVERAGE_LIBS) \
 	$(GLIB_LIBS) \
-	$(top_builddir)/vala/libvalacore.la \
+	$(top_builddir)/vala/libvala@PACKAGE_SUFFIX@.la \
 	$(top_builddir)/ccode/libvalaccode.la \
 	$(NULL)
 
-EXTRA_DIST = $(libvala_la_VALASOURCES) codegen.vapi codegen.vala.stamp
+EXTRA_DIST = $(libvalaccodegen_la_VALASOURCES) codegen.vapi codegen.vala.stamp
 
 MAINTAINERCLEANFILES = \
 	codegen.vapi \
 	valacodegen.h \
-	$(libvala_la_VALASOURCES:.vala=.c) \
+	$(libvalaccodegen_la_VALASOURCES:.vala=.c) \
 	$(NULL)
