gdbus: Don't leak nested HashTable on deserialization
Additionally make sure types derived from string are freed, e.g. ObjectPath

https://bugzilla.gnome.org/show_bug.cgi?id=782719

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -277,6 +277,7 @@ TESTS = \
 	dbus/dicts.test \
 	dbus/bug596862.vala \
 	dbus/bug602003.test \
+	dbus/bug782719.test \
 	dbus/rawvariants.test \
 	gir/bug651773.test \
 	gir/bug667751.test \
