--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -230,6 +230,7 @@ TESTS = \
 	dbus/dicts.test \
 	dbus/bug596862.vala \
 	dbus/bug602003.test \
+	dbus/bug782719.test \
 	gir/bug651773.test \
 	gir/bug667751.test \
 	gir/bug742012.test \
