codegen: Support renamed signals
The CCode attribute 'cname' needs to be the canonical representation as it
is expected in C.

https://bugzilla.gnome.org/show_bug.cgi?id=731547

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -211,6 +211,7 @@ TESTS = \
 	objects/bug701978.vala \
 	objects/bug702736.vala \
 	objects/bug702846.vala \
+	objects/bug731547.vala \
 	objects/bug751338.vala \
 	objects/bug758816.vala \
 	objects/bug760031.test \
