--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -227,6 +227,7 @@ TESTS = \
 	objects/bug779038-3.test \
 	objects/bug779219.vala \
 	objects/bug779955.vala \
+	objects/bug783897.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
