--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -184,6 +184,7 @@ TESTS = \
 	objects/bug768823.test \
 	objects/bug766739.vala \
 	objects/bug779219.vala \
+	objects/bug783897.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
