girparser: Fix parsing of delegate-alias without target
"has_target" is a ccode-attribute-based property, so don't explicitly set
it and rely on attribute-list-copy. Otherwise there will a fatal duplicated
CCode attribute.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -287,6 +287,7 @@ TESTS = \
 	gir/bug667751.test \
 	gir/bug742012.test \
 	gir/array-fixed-length.test \
+	gir/delegate-alias-without-target.test \
 	annotations/deprecated.vala \
 	annotations/description.vala \
 	annotations/noaccessormethod.test \
