--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -96,6 +96,7 @@ TESTS = \
 	methods/bug774060.vala \
 	methods/bug775466.test \
 	methods/bug781061.vala \
+	methods/bug784691.vala \
 	methods/generics.vala \
 	methods/printf-invalid.test \
 	methods/printf-constructor.vala \
