--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -110,6 +110,7 @@ TESTS = \
 	control-flow/bug661985.vala \
 	control-flow/bug665904.vala \
 	control-flow/bug691514.vala	\
+	enums/enum_only.vala \
 	enums/enums.vala \
 	enums/flags.vala \
 	enums/bug673879.vala \
