--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -93,6 +93,7 @@ TESTS = \
 	enums/bug673879.vala \
 	enums/bug763831.vala \
 	enums/bug780050.vala \
+	structs/struct_only.vala \
 	structs/structs.vala \
 	structs/gvalue.vala \
 	structs/bug530605.vala \
