codegen: Initialize temp-variable for fixed-size arrays to zero first
https://bugzilla.gnome.org/show_bug.cgi?id=787152

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -47,6 +47,7 @@ TESTS = \
 	basic-types/bug771626.test \
 	basic-types/bug772426.vala \
 	basic-types/bug777697.test \
+	basic-types/bug787152.vala \
 	chainup/class-base.vala \
 	chainup/class-base-foo.vala \
 	chainup/class-object.vala \
