--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -180,6 +180,7 @@ TESTS = \
 	objects/properties.vala \
 	objects/regex.vala \
 	objects/signals.vala \
+	objects/signals-delegate.vala \
 	objects/test-025.vala \
 	objects/test-026.vala \
 	objects/test-029.vala \
