codegen: Prioritize "array_length=true" over "array_null_terminated=true"
If arrays claim to have an array-length and also are null-terminated then
use and rely on the given length.

Adapt the girparser for this and add "array_length = true" accordingly.

https://bugzilla.gnome.org/show_bug.cgi?id=788775

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -45,6 +45,7 @@ TESTS = \
 	basic-types/bug771626.test \
 	basic-types/bug772426.vala \
 	basic-types/bug777697.test \
+	basic-types/bug788775.vala \
 	namespaces.vala \
 	methods/lambda.vala \
 	methods/closures.vala \
@@ -244,6 +245,7 @@ TESTS = \
 	gir/bug651773.test \
 	gir/bug667751.test \
 	gir/bug742012.test \
+	gir/bug788775.test \
 	gir/delegate-alias-without-target.test \
 	$(NULL)
 
