codegen: Prioritize "array_length=true" over "array_null_terminated=true"
If arrays claim to have an array-length and also are null-terminated then
use and rely on the given length.

Adapt the girparser for this and add "array_length = true" accordingly.

https://bugzilla.gnome.org/show_bug.cgi?id=788775

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -47,6 +47,7 @@ TESTS = \
 	basic-types/bug772426.vala \
 	basic-types/bug777697.test \
 	basic-types/bug787152.vala \
+	basic-types/bug788775.vala \
 	chainup/class-base.vala \
 	chainup/class-base-foo.vala \
 	chainup/class-object.vala \
@@ -295,6 +296,7 @@ TESTS = \
 	gir/bug651773.test \
 	gir/bug667751.test \
 	gir/bug742012.test \
+	gir/bug788775.test \
 	gir/array-fixed-length.test \
 	gir/delegate-alias-without-target.test \
 	annotations/deprecated.vala \
