codegen: Install as private library for sharing between internal components
https://bugzilla.gnome.org/show_bug.cgi?id=788837

--- a/codegen/Makefile.am
+++ b/codegen/Makefile.am
@@ -12,8 +12,14 @@ AM_CPPFLAGS = \
 
 BUILT_SOURCES = codegen.vala.stamp
 
-noinst_LTLIBRARIES = \
+libvalaccodegen_la_LTLIBRARIES = \
 	libvalaccodegen.la \
+	$(NULL)
+
+libvalaccodegen_ladir = $(pkglibdir)
+
+libvalaccodegen_la_LDFLAGS = \
+	-avoid-version \
 	$(NULL)
 
 libvalaccodegen_la_VALASOURCES = \
