codegen: Factor out static getters for ccode-attributes
https://bugzilla.gnome.org/show_bug.cgi?id=788837

--- a/codegen/Makefile.am
+++ b/codegen/Makefile.am
@@ -23,6 +23,7 @@ libvalaccodegen_la_LDFLAGS = \
 	$(NULL)
 
 libvalaccodegen_la_VALASOURCES = \
+	valaccode.vala \
 	valaccodearraymodule.vala \
 	valaccodeassignmentmodule.vala \
 	valaccodeattribute.vala \
