--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -240,6 +240,7 @@ TESTS = \
 	objects/bug779219.vala \
 	objects/bug779955.vala \
 	objects/bug783897.vala \
+	objects/bug788964.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
