--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -154,6 +154,7 @@ TESTS = \
 	structs/bug690380.vala \
 	structs/bug694140.vala \
 	structs/bug749952.vala \
+	structs/bug764041.test \
 	structs/bug775761.vala \
 	structs/bug777194.vala \
 	delegates/casting.vala \
