vala: Report error for missing type-parameter on enclosing type
Make a qualified guess for the cause of the problem instead of triggering
an assertion.

https://bugzilla.gnome.org/show_bug.cgi?id=587905

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -156,6 +156,7 @@ TESTS = \
 	objects/test-029.vala \
 	objects/test-034.vala \
 	objects/bug566909.vala \
+	objects/bug587905.test \
 	objects/bug588203.vala \
 	objects/bug589928.vala \
 	objects/bug593260.vala \
