vala: Allow unscoped enum values where possible
If the scope for an enumeration value can be determined from current context
it is possible to omit the enum's scope.

Based on patch by Timo Kluck

https://bugzilla.gnome.org/show_bug.cgi?id=666035

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -120,6 +120,7 @@ TESTS = \
 	enums/enum_only.vala \
 	enums/enums.vala \
 	enums/flags.vala \
+	enums/bug666035.vala \
 	enums/bug673879.vala \
 	enums/bug763831.vala \
 	enums/bug780050.vala \
