codegen: Discover invalid member access to instance field
https://bugzilla.gnome.org/show_bug.cgi?id=790903

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -116,6 +116,7 @@ TESTS = \
 	control-flow/bug691514.vala	\
 	control-flow/bug736774-1.vala \
 	control-flow/bug736774-2.vala \
+	control-flow/bug790903.test \
 	enums/enum_only.vala \
 	enums/enums.vala \
 	enums/flags.vala \
