codegen: Don't create null-safe destroy-wrapper for GenericType
https://bugzilla.gnome.org/show_bug.cgi?id=791283

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -97,6 +97,7 @@ TESTS = \
 	methods/bug775466.test \
 	methods/bug781061.vala \
 	methods/bug791215.vala \
+	methods/bug791283.vala \
 	methods/generics.vala \
 	methods/printf-invalid.test \
 	methods/printf-constructor.vala \
