--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -99,6 +99,7 @@ TESTS = \
 	methods/bug781061.vala \
 	methods/bug784691.vala \
 	methods/bug791215.vala \
+	methods/bug791283.vala \
 	methods/generics.vala \
 	methods/printf-invalid.test \
 	methods/printf-constructor.vala \
