vala: Don't transform an explicit "null" into a valid format-string
https://bugzilla.gnome.org/show_bug.cgi?id=791215

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -98,6 +98,7 @@ TESTS = \
 	methods/bug775466.test \
 	methods/bug781061.vala \
 	methods/bug784691.vala \
+	methods/bug791215.vala \
 	methods/generics.vala \
 	methods/printf-invalid.test \
 	methods/printf-constructor.vala \
